--- a/CSS/D-Drum.scss
+++ b/CSS/D-Drum.scss
@@ -4,6 +4,7 @@ $fon42: 42px;
 $fon36: 36px;
 $fon32: 32px;
 $fon30: 30px;
+$fon28: 28px;
 $fon24: 24px;
 $fon20: 20px;
 $fon18: 18px;
@@ -16,7 +17,9 @@ $fon14: 14px;
     background-size: cover;
     width: 100%;
     height: 100vh;
-
+    @media (max-width: 320px) {
+        display: none;
+    }
     .Drum {
         width: 100%;
         min-height: 100%;
@@ -24,6 +27,7 @@ $fon14: 14px;
         justify-content: center;
         padding: 2em 0;
         line-height: 1.5em;
+
         // 項目清單
         .Drum-title-group {
             width: 20%;
@@ -99,6 +103,7 @@ $fon14: 14px;
             h3 {
                 width: 100%;
                 height: 50px;
+                font-size: $fon28;
                 line-height: 50px;
                 text-align: center;
                 color: #f7f8f8;
@@ -109,6 +114,7 @@ $fon14: 14px;
             h6 {
                 width: 100%;
                 font-weight: unset;
+                font-size: $fon24;
                 display: flex;
                 margin: 10px 0;
                 .text-time {
@@ -138,6 +144,8 @@ $fon14: 14px;
                 width: 100%;
                 height: 50px;
                 line-height: 50px;
+                font-size: $fon28;
+
                 text-align: center;
                 color: #f7f8f8;
                 margin-top: 20px;
@@ -146,11 +154,14 @@ $fon14: 14px;
             h6 {
                 width: 100%;
                 font-weight: unset;
+                font-size: $fon20;
+
                 display: flex;
                 margin: 10px 0;
                 .text-time {
                     width: 15%;
                     height: 100%;
+                    font-family: "Fredericka the Great", cursive;
                 }
                 .text-con {
                     width: 85%;
@@ -172,6 +183,8 @@ $fon14: 14px;
                 width: 100%;
                 height: 50px;
                 line-height: 50px;
+                font-size: $fon28;
+
                 text-align: center;
                 color: #231815;
                 margin-top: 30px;
@@ -180,9 +193,12 @@ $fon14: 14px;
             h6 {
                 width: 100%;
                 display: flex;
+                font-size: $fon24;
+
                 margin: 10px 0;
                 .text-time {
                     width: 15%;
+                    font-family: "Fredericka the Great", cursive;
                 }
                 .text-con {
                     width: 85%;
@@ -190,7 +206,7 @@ $fon14: 14px;
             }
             .page-img-01 {
                 margin-top: 50px;
-                height: 30%;
+                height: 40%;
             }
             .line02 {
                 width: 20px;
@@ -218,6 +234,8 @@ $fon14: 14px;
                 width: 50%;
                 height: 50px;
                 line-height: 50px;
+                font-size: $fon28;
+
                 text-align: center;
                 color: #231815;
                 margin-top: 20px;
@@ -447,8 +465,8 @@ $fon14: 14px;
             perspective: 250vw;
         }
     }
-    .pages {
-    }
+    // .pages {
+    // }
 
     .book .pages {
         width: 72vw;
@@ -555,3 +573,4 @@ $fon14: 14px;
 
     // 翻書效果
 }
+
