--- a/CSS/D-Drum-mobile.css
+++ b/CSS/D-Drum-mobile.css
@@ -16,7 +16,7 @@
 
 #Drum-mobile .Drum-mobile-title {
   color: #673a1b;
-  font-size: 30px;
+  font-size: 24px;
   padding: 20px;
 }
 
@@ -24,6 +24,7 @@
   position: relative;
   display: inline-block;
   cursor: pointer;
+  z-index: 11;
 }
 
 #Drum-mobile .dropdown .dropbtn {
@@ -31,8 +32,8 @@
   color: #0b6c6d;
   padding: 16px;
   font-size: 20px;
-  height: 30px;
-  line-height: 30px;
+  height: 28px;
+  line-height: 28px;
   border: none;
   margin-bottom: 30px;
 }
@@ -40,14 +41,14 @@
 #Drum-mobile .dropdown .dropbtn .fal.fa-angle-down {
   margin-left: 10px;
   font-size: 30px;
-  height: 30px;
-  line-height: 30px;
+  height: 28px;
+  line-height: 28px;
 }
 
 #Drum-mobile .dropdown-content {
   display: none;
   position: absolute;
-  background-color: rgba(237, 227, 202, 0.5);
+  background-color: rgba(237, 227, 202, 0.9);
   min-width: 160px;
   -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -98,7 +99,7 @@
 #Drum-mobile .drum-context .mobile-con .mobile-context {
   width: 100%;
   padding: 10px;
-  height: 500px;
+  height: 100%;
 }
 
 #Drum-mobile .drum-context .mobile-con .mobile-context .mobile-con-title {
@@ -169,6 +170,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  margin-bottom: 10px;
 }
 
 .mobile-art-img {
@@ -177,13 +179,11 @@
 }
 
 .mobile-art-name {
-  background-color: #efefef;
-  border: 1px solid #e9c37c;
   width: 100%;
-  height: 100%;
+  height: 90%;
   color: #231815;
   font-size: 14px;
-  text-align: left;
+  text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -195,6 +195,31 @@
 }
 
 .mobile-art-text {
-  width: 60%;
+  width: 100%;
+  height: 10%;
+}
+
+.mobile-drama-t {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.mobile-drama-t .drama-g {
+  width: 50%;
+  padding: 10px;
+}
+
+.mobile-drama-t .drama-g .drama-i {
+  width: 80%;
+}
+
+.mobile-drama-t .drama-g .drama-t {
+  width: 100%;
+  color: #231815;
 }
 /*# sourceMappingURL=D-Drum-mobile.css.map */
