--- a/CSS/D-Drum-mobile.scss
+++ b/CSS/D-Drum-mobile.scss
@@ -12,8 +12,7 @@ $fon16: 16px;
 $fon14: 14px;
 #Drum-mobile {
     background-image: url("../img/鼓樂饗宴/鼓樂饗宴背景.png");
-    background-position: center;
-    // background-repeat: no-repeat;
+    background-position: center;    
     background-size: contain;
     width: 100%;
     height: 100%;
@@ -23,28 +22,29 @@ $fon14: 14px;
     }
     .Drum-mobile-title {
         color: #673a1b;
-        font-size: $fon30;
+        font-size: $fon24;
         padding: 20px;
     }
     .dropdown {
         position: relative;
         display: inline-block;
         cursor: pointer;
+        z-index: 11;
         .dropbtn {
             background: none;
             color: #0b6c6d;
             padding: 16px;
             font-size: 20px;
-            height: 30px;
-            line-height: 30px;
+            height: 28px;
+            line-height: 28px;
             border: none;
 
             margin-bottom: 30px;
             .fal.fa-angle-down {
                 margin-left: 10px;
                 font-size: 30px;
-                height: 30px;
-                line-height: 30px;
+                height: 28px;
+                line-height: 28px;
             }
         }
     }
@@ -52,7 +52,7 @@ $fon14: 14px;
     .dropdown-content {
         display: none;
         position: absolute;
-        background-color: rgba($color: #ede3ca, $alpha: 0.5);
+        background-color: rgba($color: #ede3ca, $alpha: 0.9);
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 1;
@@ -97,7 +97,7 @@ $fon14: 14px;
             .mobile-context {
                 width: 100%;
                 padding: 10px;
-                height: 500px;
+                height: 100%;
                 .mobile-con-title {
                     width: 100%;
                     height: 10%;
@@ -107,6 +107,7 @@ $fon14: 14px;
                     font-size: $fon14;
                     width: 100%;
                     height: 90%;
+
                     .text-time {
                         font-family: "Fredericka the Great", cursive;
                     }
@@ -159,6 +160,7 @@ $fon14: 14px;
     position: relative;
     width: 100%;
     height: 100%;
+    margin-bottom: 10px;
 }
 
 .mobile-art-img {
@@ -166,17 +168,36 @@ $fon14: 14px;
     height: 250px;
 }
 .mobile-art-name {
-    background-color: #efefef;
-    border: 1px solid #e9c37c;
+    // background-color: #efefef;
+    // border: 1px solid #e9c37c;
     width: 100%;
-    height: 100%;
+    height: 90%;
     color: #231815;
     font-size: $fon14;
-    text-align: left;
+    text-align: center;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
 .mobile-art-text {
-    width: 60%;
+    width: 100%;
+    height: 10%;
+}
+.mobile-drama-t {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    .drama-g {
+        width: 50%;
+        padding: 10px;
+        .drama-i {
+            width: 80%;
+        }
+        .drama-t {            
+            width: 100%;
+            color: #231815;
+
+        }
+    }
 }
