--- a/CSS/E-Information.css
+++ b/CSS/E-Information.css
@@ -39,7 +39,7 @@ body {
 
 .park_tittle {
   margin-top: 100px;
-  margin-bottom: 30px;
+  margin-bottom: 80px;
   width: 80%;
   color: #673a1b;
   font-size: 48px;
@@ -73,9 +73,10 @@ body {
 
 .park_lease_box {
   width: 60%;
-  font-size: 32px;
+  font-size: 42px;
   height: 40px;
   line-height: 40px;
+  margin-bottom: 80px;
   cursor: pointer;
 }
 
@@ -112,9 +113,10 @@ body {
 
 .park_lease_tour {
   width: 60%;
-  font-size: 32px;
+  font-size: 42px;
   height: 40px;
   line-height: 40px;
+  margin-bottom: 80px;
   cursor: pointer;
 }
 
@@ -151,9 +153,10 @@ body {
 
 .park_lease_show {
   width: 60%;
-  font-size: 32px;
+  font-size: 42px;
   height: 40px;
   line-height: 40px;
+  margin-bottom: 80px;
   cursor: pointer;
 }
 
@@ -232,10 +235,14 @@ a.park_lease_show:hover {
   display: -ms-flexbox;
   display: flex;
   justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .style_img {
-  width: 90%;
+  margin: auto;
+  width: 80%;
 }
 
 /* --------開關顯示---- */
