--- a/CSS/E-Information.scss
+++ b/CSS/E-Information.scss
@@ -38,7 +38,7 @@ body {
 }
 .park_tittle {
     margin-top: 100px;
-    margin-bottom: 30px;
+    margin-bottom: 80px;
     width: 80%;
     color: #673a1b;
     font-size: $fon48;
@@ -61,9 +61,10 @@ body {
 
 .park_lease_box {
     width: 60%;
-    font-size: $fon32;
+    font-size: 42px;
     height: 40px;
     line-height: 40px;
+    margin-bottom: 80px;
     cursor: pointer;
     @media (max-width: 1280px) {
         font-size: $fon24;
@@ -85,9 +86,10 @@ body {
 }
 .park_lease_tour {
     width: 60%;
-    font-size: $fon32;
+    font-size: 42px;
     height: 40px;
     line-height: 40px;
+    margin-bottom: 80px;
     cursor: pointer;
     @media (max-width: 1280px) {
         font-size: $fon24;
@@ -109,9 +111,10 @@ body {
 }
 .park_lease_show {
     width: 60%;
-    font-size: $fon32;
+    font-size: 42px;
     height: 40px;
     line-height: 40px;
+    margin-bottom: 80px;
     cursor: pointer;
     @media (max-width: 1280px) {
         font-size: $fon24;
@@ -169,9 +172,11 @@ a.park_lease_show {
     
     display: flex; 
     justify-items: center;
+    align-items: center;
 }
 .style_img{
-    width: 90%;
+    margin: auto;
+    width: 80%;
 }
 /* --------開關顯示---- */
 
