--- a/CSS/C-Facility.css
+++ b/CSS/C-Facility.css
@@ -8,16 +8,16 @@
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin: auto;
-  background-color: #eab854;
-  opacity: 0.8;
+  background-image: url("../img/設施/設施背景_工作區域 1.png");
+  background-position: center;
+  z-index: 0;
 }
 
 .bag-img {
   position: absolute;
   width: 100%;
   height: 90vh;
-  background-image: url("./img/插圖/雙飛飛人.png");
-  background-repeat: no-repeat;
+  z-index: 1;
 }
 
 .facility-title {
@@ -25,8 +25,6 @@
   height: 80px;
   font-size: 54px;
   text-align: center;
-  color: #f7f8f8;
-  border-bottom: 2px solid #f7f8f8;
 }
 
 @media (max-width: 1280px) {
