--- a/CSS/C-Facility.scss
+++ b/CSS/C-Facility.scss
@@ -15,15 +15,19 @@ $fon14: 14px;
     display: flex;
     flex-wrap: wrap;
     margin: auto;
-    background-color: #eab854;
-    opacity: 0.8;
+    background-image: url('../img/設施/設施背景_工作區域\ 1.png');
+    background-position: center;
+    // opacity: 0.8;
+    z-index: 0;
 }
 .bag-img {
     position: absolute;
     width: 100%;
     height: 90vh;
-    background-image: url("./img/插圖/雙飛飛人.png");
-    background-repeat: no-repeat;
+    // background-image: url("./img/插圖/雙飛飛人.png");
+    // background-repeat: no-repeat;
+    // background-size: contain;
+    z-index: 1;
 }
 
 .facility-title {
@@ -31,8 +35,8 @@ $fon14: 14px;
     height: 80px;
     font-size: 54px;
     text-align: center;
-    color: #f7f8f8;
-    border-bottom: 2px solid #f7f8f8;
+    // color: #f7f8f8;
+    // border-bottom: 2px solid #f7f8f8;
     @media (max-width: 1280px) {
           font-size: $fon48;      
     }
