--- a/CSS/E-Information.scss
+++ b/CSS/E-Information.scss
@@ -12,7 +12,69 @@ $fon14: 14px;
 body {
     margin: 0;
     box-sizing: border-box;
-}
+    overflow-x: hidden;}
+
+.bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: url() center center no-repeat;
+    background-size: cover;
+  }
+  
+  .smoke,
+  .smoke-bg {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    
+    background-image: url('../img/主頁背景/cloud_PNG4.png');
+    z-index: 1;
+    background-size: cover;
+  }
+  
+  .smoke-bg {
+    
+    background-image: url('../img/主頁背景/sport-smoke.png');
+    z-index: 0;
+  }
+  
+  .smoke {
+    animation: float2 15s infinite ease-in-out;
+  }
+  
+  .smoke-bg {
+    animation: float alternate 30s infinite ease-in-out;
+  }
+  
+  @keyframes float {
+    0% {
+      opacity: 0.8;
+      transform: translateX(3%) scale(1.2);
+    }
+    50% {
+      opacity: 0.8;
+      transform: translateX(0) scale(1.4);
+    }
+    100% {
+      opacity: 0.8;
+      transform: translateX(-3%) scale(1.2);
+    }
+  }
+  @keyframes float2 {
+    0% {
+      opacity: 0;
+      transform: translateX(-10%) scale(1.5);
+    }
+    50% {
+      opacity: 1;
+      transform: translateX(0) scale(1.2);
+    }
+    100% {
+      opacity: 0;
+      transform: translateX(10%) scale(1.5);
+    }
+  }
 // 切板完成
 .park_pag {
     width: 100%;
@@ -25,6 +87,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    z-index: 4;
 }
 
 .park_button_bar {
@@ -35,6 +98,7 @@ body {
     align-content: flex-start;
     flex-wrap: wrap;
     text-align: center;
+    z-index: 5;
 }
 .park_tittle {
     margin-top: 100px;
@@ -153,6 +217,7 @@ a.park_lease_show {
     width: 80%;
     display: flex;
     justify-content: center;
+    z-index: 5;
 }
 .park_photobox {
     width: 100%;
